--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,8 @@ dependencies {
     // security
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity6'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 
     //JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
